; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_blas.c_logistic_x_ent_cpu.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_blas.c_logistic_x_ent_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @logistic_x_ent_cpu(i32 %0, float* %1, float* %2, float* %3, float* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca float*, align 8
  %8 = alloca float*, align 8
  %9 = alloca float*, align 8
  %10 = alloca float*, align 8
  %11 = alloca i32, align 4
  %12 = alloca float, align 4
  %13 = alloca float, align 4
  store i32 %0, i32* %6, align 4
  store float* %1, float** %7, align 8
  store float* %2, float** %8, align 8
  store float* %3, float** %9, align 8
  store float* %4, float** %10, align 8
  store i32 0, i32* %11, align 4
  br label %14

14:                                               ; preds = %56, %5
  %15 = load i32, i32* %11, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %59

18:                                               ; preds = %14
  %19 = load float*, float** %8, align 8
  %20 = load i32, i32* %11, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds float, float* %19, i64 %21
  %23 = load float, float* %22, align 4
  store float %23, float* %12, align 4
  %24 = load float*, float** %7, align 8
  %25 = load i32, i32* %11, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds float, float* %24, i64 %26
  %28 = load float, float* %27, align 4
  store float %28, float* %13, align 4
  %29 = load float, float* %12, align 4
  %30 = fneg float %29
  %31 = load float, float* %13, align 4
  %32 = fptosi float %31 to i32
  %33 = call i32 @log(i32 %32)
  %34 = sitofp i32 %33 to float
  %35 = fmul float %30, %34
  %36 = load float, float* %12, align 4
  %37 = fsub float 1.000000e+00, %36
  %38 = load float, float* %13, align 4
  %39 = fsub float 1.000000e+00, %38
  %40 = fptosi float %39 to i32
  %41 = call i32 @log(i32 %40)
  %42 = sitofp i32 %41 to float
  %43 = fmul float %37, %42
  %44 = fsub float %35, %43
  %45 = load float*, float** %10, align 8
  %46 = load i32, i32* %11, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds float, float* %45, i64 %47
  store float %44, float* %48, align 4
  %49 = load float, float* %12, align 4
  %50 = load float, float* %13, align 4
  %51 = fsub float %49, %50
  %52 = load float*, float** %9, align 8
  %53 = load i32, i32* %11, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds float, float* %52, i64 %54
  store float %51, float* %55, align 4
  br label %56

56:                                               ; preds = %18
  %57 = load i32, i32* %11, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %11, align 4
  br label %14

59:                                               ; preds = %14
  ret void
}

declare dso_local i32 @log(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
